@@ -1,28 +1,25 @@
-FROM openjdk:8-jdk-alpine as build
-WORKDIR /workspace/app
-
-COPY backend/target/*.jar .
-
-RUN mkdir -p dependency && (cd dependency; jar -xf ../*.jar)
-
-FROM metersphere/fabric8-java-alpine-openjdk8-jre
+FROM registry.fit2cloud.com/metersphere/alpine-openjdk21-jre
 
 LABEL maintainer="FIT2CLOUD <support@fit2cloud.com>"
 
 ARG MS_VERSION=dev
-ARG DEPENDENCY=/workspace/app/dependency
+ARG DEPENDENCY=backend/app/target/dependency
 
-COPY --from=build ${DEPENDENCY}/BOOT-INF/lib /app/lib
-COPY --from=build ${DEPENDENCY}/META-INF /app/META-INF
-COPY --from=build ${DEPENDENCY}/BOOT-INF/classes /app
+COPY ${DEPENDENCY}/BOOT-INF/lib /app/lib
+COPY ${DEPENDENCY}/META-INF /app/META-INF
+COPY ${DEPENDENCY}/BOOT-INF/classes /app
 
-RUN mv /app/jmeter /opt/
-RUN mkdir -p /opt/jmeter/lib/junit
+# 静态文件
+COPY backend/app/src/main/resources/static /app/static
+ADD frontend/public /app/static
 
-ENV JAVA_CLASSPATH=/app:/app/lib/*
+
+ENV JAVA_CLASSPATH=/app:/opt/jmeter/lib/ext/*:/app/lib/*
 ENV JAVA_MAIN_CLASS=io.metersphere.Application
 ENV AB_OFF=true
 ENV MS_VERSION=${MS_VERSION}
-ENV JAVA_OPTIONS="-Dfile.encoding=utf-8 -Djava.awt.headless=true"
+ENV JAVA_OPTIONS="-Dfile.encoding=utf-8 -Djava.awt.headless=true --add-opens java.base/jdk.internal.loader=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED"
+
+RUN echo -n "${MS_VERSION}" > /tmp/MS_VERSION
 
 CMD ["/deployments/run-java.sh"]
